Fix modal z-index issue.

--- a/web/less/frontend/modules/mycq.less
+++ b/web/less/frontend/modules/mycq.less
@@ -1418,7 +1418,7 @@ textarea.input-xlarge {
 	&.fixed {
 		position: fixed;
 		width: 910px;
-		z-index: 3999;
+		z-index: 999;
 	}
 }
 
